# ROS-Robot-Exploration

./: .gitignore  .gitmodules  Dockerfile.ROS2  README.md  dependencies.sh  entrypoint.sh  run.sh  setup.sh
.github/workflows/: pipeline.yaml
launch/: brightness.yaml  talker-listener.yaml
src/brightness/: CMakeLists.txt  package.xml
src/brightness/launch/: brightness.yaml
src/brightness/rvis/: rosbot.rviz
src/brightness/src/: brightness.cpp
src/rosbot/: CMakeLists.txt  package.xml
src/rosbot/config/: detection.yaml  explore.yaml  navigation.yaml  slam.yaml
src/rosbot/custom_rosdep/: slam-toolbox.yaml  update_sources.sh
src/rosbot/include/rosbot/: detection.hpp  tracker.hpp
src/rosbot/launch/: amcl.launch.py  brightness.yaml  detection.launch.py  explore.launch.py  joystick.launch.py  navigation.launch.py  slam.launch.py  tf_broadcaster.yaml  tf_listener.yaml  tracker.yaml
src/rosbot/rviz/: acml.rviz  detection.rviz  explore.rviz  navigation.rviz  rosbot.rviz  slam.rviz  tf.rviz
src/rosbot/src/: brightness.cpp  detection.cpp  tf_listener.cpp  tracker.cpp
src/rosbot_msgs/: CMakeLists.txt  package.xml
src/rosbot_msgs/msg/: Detections.msg  Match.msg
